--- a/IdentityTheftGame_page2.html
+++ b/IdentityTheftGame_page2.html
@@ -36,7 +36,7 @@ var questionNo = -1;
 var questionsList = ["What is Identity cloning?", "Identity theft damage is lmited to financial loss.", "Identity theft is a federal crime and its victim is recognized as a true victim in the eyes of law.", "Dumpster divers can steal your identity from thrown away receipts, credit offers, account statements and expired cards."];
 var answersA = ["Getting duplicate identity card when you already have one.", "Answer A.", "Answer A.", "Answer A."];
 var answersB = ["Using another's information to assume his or her identity in daily life.", "Answer B.", "Answer B.", "Answer B."];
-var answersC = ["Getting duplicate identity card when you loose your original card.", "Answer C.", "Answer C.", "Answer C."];
+var answersC = ["Getting duplicate identity card when you lose your original card.", "Answer C.", "Answer C.", "Answer C."];
 var answersList = ["B","B","C","B"];
 var backgroundList = ["bg1.jpg","bg2.jpg","bg3.jpg","bg4.jpg","bg5.jpg","bg6.jpg"];
 var qstnInterval = 650;
